adjust pic size

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@ Precondition：用户已选择运动计划。
 Exception：如果应用无法出现错误无法记录，则提示用户。</p>
 <hr>
 <h3 id="-">初步界面设计</h3>
-<p><img src="111.png" alt="风格一"></p>
-<p><img src="222.png" alt="风格二"> </p>
-<p><img src="333.png" alt="风格三"></p>
+<p><img src="111.png" alt="风格一" width="553" height="270"></p>
+<p><img src="222.png" alt="风格二" width="553" height="270"></p>
+<p><img src="333.png" alt="风格三" width="553" height="270"></p>
 <p>第一种风格设计较能清晰地反映出用户的当前状态，虽然使用流程不如第二、第三种风格那么一目了然，但是它可以具体地展示用户的行为和系统的各种信息，对于用户来说比较方便和直观。</p>
 <h3 id="-">总体设计</h3>
-<p><img src="image-20220418181412982.png" alt=" "></p>
-<p><img src="image-20220418181336161.png" alt=" "></p>
-<p><img src="image-20220418181425547.png" alt=" "></p>
-<p><img src="image-20220418181438439.png" alt=" "></p>
-<p><img src="image-20220418181450129.png" alt=" "></p>
-<p><img src="image-20220418181502130.png" alt=" "></p>
-<p><img src="image-20220418181512650.png" alt=" "></p>
+<p><img src="image-20220418181412982.png" alt=" " width="553" height="270"></p>
+<p><img src="image-20220418181336161.png" alt=" " width="553" height="270"></p>
+<p><img src="image-20220418181425547.png" alt=" " width="553" height="270"></p>
+<p><img src="image-20220418181438439.png" alt=" " width="553" height="270"></p>
+<p><img src="image-20220418181450129.png" alt=" " width="553" height="270"></p>
+<p><img src="image-20220418181502130.png" alt=" " width="553" height="270"></p>
+<p><img src="image-20220418181512650.png" alt=" " width="553" height="270"></p>
 <h3 id="-">故事板</h3>
 <p>一、 佩戴设备</p>
 <p><img src="image-20220418180838877.png" alt=""></p>
@@ -95,34 +95,3 @@ Exception：如果应用无法出现错误无法记录，则提示用户。</p>
 <h4 id="-">用户人群</h5>
 <p>邀请不同的目标人群进行健身，收集他们对健身体验的感受和意见，并询问他们对VR健身和健身房健身之间的对比感受，根据用户意见更改设备内置的套餐或设备的外观。</p>
 </div>
-
-
-<!--<div class="user-details">
-<h2> Me and this website </h2>
-<p style="text-align: justify;"> Your description </p>
-<div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
-	<h3> Analytics </h3>
-	{% include clustrmap.html style="js" %}
-	<p> <small> If you are not seeing a map, please disable Ad block </small></p>
-</div>
-</div>
-<div class="permlinks">
-<h2>Recent Posts</h2>
-<dl>
-	{% for post in site.posts limit:3 %}
-	<dt><code>{{ post.date | date_to_string }} </code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="{{ post.url }}">{{ post.title }}</a> &nbsp;{% include status-indicator.html status=post.status%}
-	{% if post.description %}
- <dd style="text-align: justify">{{ post.description | markdownify }}
-    </dd>
-	{% endif %}
-	{% endfor %}
-	<p>... <a href="/blog">Full Posts List</a> </p>
-</dl>
-
-<h2>Upcoming Posts (edit me at /index.html )</h2>
-<ul>
-	<li>Post 1</li>
-	<li>Post 2</li>
-</ul>
-
-</div >-->
